# ecaptureQ

./: .gitattributes  .gitignore  CHANGELOG.md  PRIVACY.md  README.md  README_CN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: fmt.yml  pr-build.yml  pr_build_android.yml  release.yml
docs/: custom_sql_examples.md  custom_sql_examples_english.md
scripts/: go.mod  log.sh  mock-websocket-server.js  mock_ws.go
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  ecaptureq.provisionprofile  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug_logger.rs  lib.rs  main.rs
src-tauri/src/core/: actor.rs  data_processing.rs  mod.rs  models.rs  queries.rs
src-tauri/src/protobuf/v1/: ecaptureq.proto
src-tauri/src/services/: capture.rs  mod.rs  push_service.rs  websocket.rs
src-tauri/src/tauri_bridge/: command.rs  commands.rs  converters.rs  mod.rs  state.rs
src/assets/fonts/: fonts.css
src/components/: ConnectionStatus.tsx  Controls.tsx  DetailModal.tsx  NewPacketCard.tsx  NewPacketList.tsx  PacketCard.tsx  PacketDetailModal.tsx  PacketList.tsx  PacketTable.tsx  ResponsivePacketView.tsx
src/hooks/: useAppState.ts  useConfig.ts  useConfigs.ts  usePlatform.ts  useResponsive.ts
src/layouts/: AppLayout.tsx  DesktopApp.tsx  MobileApp.tsx
src/pages/: CapturePage.tsx  CapturePageMobile.tsx  SettingsPage.tsx
src/services/: apiService.ts  websocketService.ts
src/types/: index.ts
src/utils/: httpParser.ts  timeUtils.ts
src/windows/: MainWindow.tsx  SettingsWindow.tsx
