[package]
name = "ecaptureq"
version = "0.1.0"
description = "A cross-platform network packet capture and analyzer"
authors = ["gojue"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ecaptureq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-websocket = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.49.1", features = ["lazy", "describe", "sql"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
nix = { version = "0.30.1", features = ["signal"] }
anyhow = "1.0.98"
log = { version = "0.4.27", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
tauri-plugin-log = "2.6.0"
