[package]
name = "eCaptureQ"
version = "0.1.0"
description = "A cross-platform desktop application for eCapture, the powerful eBPF-based SSL/TLS traffic capture tool."
authors = ["gojue"]
edition = "2024"
build = "build.rs"

[lib]
name = "ecaptureq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-store = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
log = { version = "0.4.27", features = ["std"] }
tauri-plugin-log = "2.6.0"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.27.0", features = ["handshake"] }
# chrono = { version = "0.4.41", features = ["serde"] }
polars = { version = "0.49.1", default-features = false, features = ["lazy", "sql"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
nix = { version = "0.30.1", default-features = false, features = ["signal", "user"] }
sha2 = "0.10.9"
hex = "0.4.3"
http = "1"
base64 = "0.22.1"
wg = { version = "0.9.2", features = ["future"] }

# Build profile for release: optimize for size
[profile.release]
opt-level = "s"      # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1    # Slower builds, but better optimization
panic = "abort"      # Abort on panic to reduce binary size
strip = true           # Strip symbols from the final binary
